Add the banner on the homepage

--- a/index.html
+++ b/index.html
@@ -4,12 +4,52 @@
   <meta charset="utf-8">
   <title>Freedom Dog Rescue</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
-  <link href="css/modules.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700" rel="stylesheet">
 </head>
 <body>
+
+  <ul class="skip-links">
+    <li><a href="#nav">Jump to navigation</a></li>
+    <li><a href="#main">Jump to main content</a></li>
+  </ul>
+
+  <header role="banner" class="grid">
+    <nav role="navigation" class="unit xs-1 s-1" id="nav" tabindex="0">
+      <ul class="list-group-inline text-center">
+        <li><a class="no-line" href="rescues.html">Available Rescues</a></li>
+        <li><a class="no-line" href="adopt.html">Adopt a Rescue</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main role="main" id="main" tabindex="0">
+    <section class="grid">
+      <div class="unit xs-1 s-0">
+        <div class="embed embed-2by3">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3 brown puppies">
+        </div>
+      </div>
+      <div class="unit xs-0 s-1 m-0">
+        <div class="embed embed-4by3">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3 brown puppies">
+        </div>
+      </div>
+      <div class="unit xs-0 m-1">
+        <div class="embed embed-16by9">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3 brown puppies">
+        </div>
+      </div>
+      <div class="unit xs-1 s-1 m-1 l-1 gutter pin-lb">
+        <h1>Giving Freedom to One Dog at a Time</h1>
+        <h2>Every dog deserves to live a happy life. Adopt, don't shop.</h2>
+        <a class="btn" href="adopt.html">Adopt a dog today</a>
+      </div>
+    </section>
+  </main>
 
 </body>
 </html>
