Style the header and banner

--- a/index.html
+++ b/index.html
@@ -19,37 +19,61 @@
 
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1 s-1" id="nav" tabindex="0">
-      <ul class="list-group-inline text-center">
-        <li><a class="no-line" href="rescues.html">Available Rescues</a></li>
-        <li><a class="no-line" href="adopt.html">Adopt a Rescue</a></li>
+      <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
+        <li><a class="no-line gutter" href="rescues.html">Available Rescues</a></li>
+        <li><a class="no-line gutter" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
     </nav>
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="grid">
+    <section class="grid relative">
       <div class="unit xs-1 s-0">
         <div class="embed embed-2by3">
-          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3 brown puppies">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
         </div>
       </div>
       <div class="unit xs-0 s-1 m-0">
         <div class="embed embed-4by3">
-          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3 brown puppies">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
         </div>
       </div>
       <div class="unit xs-0 m-1">
         <div class="embed embed-16by9">
-          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3 brown puppies">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
         </div>
       </div>
-      <div class="unit xs-1 s-1 m-1 l-1 gutter pin-lb">
-        <h1>Giving Freedom to One Dog at a Time</h1>
+      <div class="unit xs-1 s-1 m-1 l-1 gutter pin-lb pad-t-2 pad-b-2 gradient">
+        <h1 class="yotta">Giving Freedom to One Dog at a Time</h1>
         <h2>Every dog deserves to live a happy life. Adopt, don't shop.</h2>
         <a class="btn" href="adopt.html">Adopt a dog today</a>
       </div>
     </section>
+    <section class="grid">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter pad-t">
+        <h3>About Us</h3>
+        <p>Freedom Dog Rescue is a non-profit registered charity which was founded in Ottawa in February 2015. We are an all-breed, all-size foster based rescue which operates in Ottawa and surrounding areas. Registered Charity #783761323RR0001 Non-Profit Corporation #9629629.</p>
+        <p>We are dedicated to rescuing homeless and abandoned dogs, dogs from shelters and taking in desperate owner surrenders when they can no longer care for them.</p>
+      </div>
+      <div class="unit l-1-2">
+        <div class="embed embed-4by3">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+        </div>
+      </div>
+    </section>
   </main>
+
+  <footer role="contentinfo" class="grid">
+    <div class="unit micro pad-t-1-2">
+      <p class="gutter push-1-2">© 2018 Freedom Dog Rescue. All rights reserved.</p>
+    </div>
+    <div class="unit micro pad-t-1-2">
+      <ul class="list-group-inline text-center gutter push-1-2">
+        <li><a class="no-line push-1-2" href="rescues.html">Available Rescues</a></li>
+        <li><a class="no-line push-1-2" href="adopt.html">Adopt a Rescue</a></li>
+      </ul>
+    </div>
+  </footer>
 
 </body>
 </html>
