Add the base for the rescue and adopt html

--- a/index.html
+++ b/index.html
@@ -44,16 +44,82 @@
         </div>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1 gutter pin-lb pad-t-2 pad-b-2 gradient">
-        <h1 class="yotta">Giving Freedom to One Dog at a Time</h1>
-        <h2>Every dog deserves to live a happy life. Adopt, don't shop.</h2>
+        <h1 class="yotta white">Giving Freedom to One Dog at a Time</h1>
+        <h2 class="white">Every dog deserves to live a happy life. Adopt, don't shop.</h2>
         <a class="btn" href="adopt.html">Adopt a dog today</a>
       </div>
     </section>
+
+    <article>
+      <div>
+        <p class="island-1-2 text-center push-0 white">Adopt a dog today</p>
+      </div>
+    </article>
+
     <section class="grid">
       <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter pad-t">
-        <h3>About Us</h3>
-        <p>Freedom Dog Rescue is a non-profit registered charity which was founded in Ottawa in February 2015. We are an all-breed, all-size foster based rescue which operates in Ottawa and surrounding areas. Registered Charity #783761323RR0001 Non-Profit Corporation #9629629.</p>
-        <p>We are dedicated to rescuing homeless and abandoned dogs, dogs from shelters and taking in desperate owner surrenders when they can no longer care for them.</p>
+        <h3 class="push-1-2">About Us</h3>
+        <p class="push-1-2">Freedom Dog Rescue is a non-profit registered charity which was founded in Ottawa in February 2015. We are an all-breed, all-size foster based rescue which operates in Ottawa and surrounding areas.</p>
+        <p class="push-1-2">We are dedicated to rescuing homeless and abandoned dogs, dogs from shelters and taking in desperate owner surrenders when they can no longer care for them.</p>
+      </div>
+      <div class="unit l-1-2">
+        <div class="embed embed-4by3">
+          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+        </div>
+      </div>
+    </section>
+
+    <article>
+      <div>
+        <p class="island-1-2 text-center push-0 white">Adopt a dog today</p>
+      </div>
+    </article>
+
+    <section>
+      <ul class="list-group grid push-0">
+        <li class="unit xs-1 m-1-2 l-1-2 island">
+          <div class="grid">
+            <div class="unit embed embed-3by2 push">
+              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+            </div>
+            <div class="unit xs-1">
+              <p>You know you've always wanted a dog and now is the time! We are here to help you get ready for your new family member, and as soon as you're ready to take the big plunge we're here to help you find the right dog. Owning a pet is one of the most gratifying things you can do.</p>
+            </div>
+            <div class="unit xs-1 text-center">
+              <a class="btn gutter-2 push-0" href="rescues.html">More info</a>
+            </div>
+          </div>
+        </li>
+        <li class="unit xs-1 m-1-2 l-1-2 island">
+          <div class="grid">
+            <div class="unit embed embed-3by2 push">
+              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+            </div>
+            <div class="unit xs-1">
+              <p>It's hard knowing what to do when you're about to adopt. We make this process easier when you adopt with us, because we have trained volunteers that will go over every possible question or concern you and your family might have about introducing your newest pal to the family.</p>
+            </div>
+            <div class="unit xs-1 text-center">
+              <a class="btn gutter-2 push-0" href="adopt.html">More info</a>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <article>
+      <div>
+        <p class="island-1-2 text-center push-0 white">Adopt a dog today</p>
+      </div>
+    </article>
+
+    <section class="grid">
+      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter pad-t">
+        <h3 class="push-1-2">Contact Us</h3>
+        <p class="push-1-2">ADOPTIONS: ADOPTIONS@FREEDOMDOGRESCUE.CA</p>
+        <p class="push-1-2">EVENT/FUNDRAISING: FUNDRAISING@FREEDOMDOGRESCUE.CA</p>
+        <p class="push-1-2">INTAKE/OWNER SURRENDER: FREEDOMDOGINTAKE@GMAIL.COM</p>
+        <p class="push-1-2">GENERAL INQUIRIES: FREEDOMDOGRESCUE@GMAIL.COM</p>
+        <p class="push-1-2">DONATIONS: FINANCE@FREEDOMDOGRESCUE.CA</p>
       </div>
       <div class="unit l-1-2">
         <div class="embed embed-4by3">
