Change copied text and delete extra code

--- a/rescues.html
+++ b/rescues.html
@@ -30,8 +30,7 @@
     <section class="grid">
       <div class="unit gutter pad-t">
         <h1 class="push-1-2">Available Rescues</h1>
-        <p class="push-1-2">Freedom Dog Rescue is a non-profit registered charity which was founded in Ottawa in February 2015. We are an all-breed, all-size foster based rescue which operates in Ottawa and surrounding areas.</p>
-        <p class="push-1-2">We are dedicated to rescuing homeless and abandoned dogs, dogs from shelters and taking in desperate owner surrenders when they can no longer care for them.</p>
+        <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
       </div>
     </section>
 
@@ -43,10 +42,7 @@
               <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
-              <p>We work hard to make sure that we take care of all of our pets here at Freedom Dog Rescue. Unfortunately we can't do it without people like you and your donations of time and money. If you want to be a part of our family and help some of the best animals around, please check us out.</p>
-            </div>
-            <div class="unit xs-1 text-center">
-              <a class="btn gutter-2 push-0" href="rescues.html">More info</a>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
             </div>
           </div>
         </li>
@@ -56,10 +52,7 @@
               <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
-              <p>We work hard to make sure that we take care of all of our pets here at Freedom Dog Rescue. Unfortunately we can't do it without people like you and your donations of time and money. If you want to be a part of our family and help some of the best animals around, please check us out.</p>
-            </div>
-            <div class="unit xs-1 text-center">
-              <a class="btn gutter-2 push-0" href="adopt.html">More info</a>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
             </div>
           </div>
         </li>
@@ -69,10 +62,7 @@
               <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
-              <p>We work hard to make sure that we take care of all of our pets here at Freedom Dog Rescue. Unfortunately we can't do it without people like you and your donations of time and money. If you want to be a part of our family and help some of the best animals around, please check us out.</p>
-            </div>
-            <div class="unit xs-1 text-center">
-              <a class="btn gutter-2 push-0" href="rescues.html">More info</a>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
             </div>
           </div>
         </li>
@@ -82,10 +72,7 @@
               <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
-              <p>We work hard to make sure that we take care of all of our pets here at Freedom Dog Rescue. Unfortunately we can't do it without people like you and your donations of time and money. If you want to be a part of our family and help some of the best animals around, please check us out.</p>
-            </div>
-            <div class="unit xs-1 text-center">
-              <a class="btn gutter-2 push-0" href="rescues.html">More info</a>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
             </div>
           </div>
         </li>
@@ -95,10 +82,7 @@
               <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
-              <p>We work hard to make sure that we take care of all of our pets here at Freedom Dog Rescue. Unfortunately we can't do it without people like you and your donations of time and money. If you want to be a part of our family and help some of the best animals around, please check us out.</p>
-            </div>
-            <div class="unit xs-1 text-center">
-              <a class="btn gutter-2 push-0" href="rescues.html">More info</a>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
             </div>
           </div>
         </li>
@@ -108,10 +92,7 @@
               <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
-              <p>We work hard to make sure that we take care of all of our pets here at Freedom Dog Rescue. Unfortunately we can't do it without people like you and your donations of time and money. If you want to be a part of our family and help some of the best animals around, please check us out.</p>
-            </div>
-            <div class="unit xs-1 text-center">
-              <a class="btn gutter-2 push-0" href="rescues.html">More info</a>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
             </div>
           </div>
         </li>
