--- a/adopt.html
+++ b/adopt.html
@@ -30,13 +30,11 @@
     <section class="grid">
       <div class="unit gutter pad-t">
         <h1 class="push-1-2">Adoption Process</h1>
-        <p class="push-1-2">Freedom Dog Rescue is a non-profit registered charity which was founded in Ottawa in February 2015. We are an all-breed, all-size foster based rescue which operates in Ottawa and surrounding areas.</p>
-        <p class="push-1-2">We are dedicated to rescuing homeless and abandoned dogs, dogs from shelters and taking in desperate owner surrenders when they can no longer care for them.</p>
+        <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
       </div>
       <div class="unit gutter pad-t">
         <h2 class="push-1-2">Adoption Fee</h2>
-        <p class="push-1-2">Freedom Dog Rescue is a non-profit registered charity which was founded in Ottawa in February 2015. We are an all-breed, all-size foster based rescue which operates in Ottawa and surrounding areas.</p>
-        <p class="push-1-2">We are dedicated to rescuing homeless and abandoned dogs, dogs from shelters and taking in desperate owner surrenders when they can no longer care for them.</p>
+        <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
       </div>
     </section>
   </main>
