--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </ul>
 
   <header role="banner" class="grid">
-    <nav role="navigation" class="unit xs-1 s-1" id="nav" tabindex="0">
+    <nav role="navigation" class="unit xs-1" id="nav" tabindex="0">
       <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
         <li><a class="no-line gutter" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line gutter" href="adopt.html">Adopt a Rescue</a></li>
@@ -28,75 +28,58 @@
 
   <main role="main" id="main" tabindex="0">
     <section class="grid relative">
-      <div class="unit xs-1 s-0">
-        <div class="embed embed-2by3">
-          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
-        </div>
-      </div>
-      <div class="unit xs-0 s-1 m-0">
-        <div class="embed embed-4by3">
-          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
-        </div>
-      </div>
       <div class="unit xs-0 m-1">
         <div class="embed embed-16by9">
           <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
         </div>
       </div>
-      <div class="unit xs-1 s-1 m-1 l-1 gutter pin-lb pad-t-2 pad-b-2 gradient">
+      <div class="unit xs-1 gutter pin-lb pad-t-2 pad-b-2 gradient">
         <h1 class="yotta white">Giving Freedom to One Dog at a Time</h1>
-        <h2 class="white">Every dog deserves to live a happy life. Adopt, don't shop.</h2>
+        <h2 class="white">Every dog deserves to live a happy life.</h2>
         <a class="btn" href="adopt.html">Adopt a dog today</a>
       </div>
     </section>
 
-    <article>
-      <div>
-        <p class="island-1-2 text-center push-0 white">Adopt a dog today</p>
-      </div>
-    </article>
-
     <section class="grid">
-      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter pad-t">
+      <div class="unit xs-1 m-1-2 gutter pad-t">
         <h3 class="push-1-2">About Us</h3>
-        <p class="push-1-2">Freedom Dog Rescue is a non-profit registered charity which was founded in Ottawa in February 2015. We are an all-breed, all-size foster based rescue which operates in Ottawa and surrounding areas.</p>
-        <p class="push-1-2">We are dedicated to rescuing homeless and abandoned dogs, dogs from shelters and taking in desperate owner surrenders when they can no longer care for them.</p>
+        <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
       </div>
-      <div class="unit l-1-2">
+      <div class="unit l-1-2 island">
         <div class="embed embed-4by3">
           <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
         </div>
       </div>
     </section>
 
-    <article>
-      <div>
-        <p class="island-1-2 text-center push-0 white">Adopt a dog today</p>
-      </div>
-    </article>
-
     <section>
-      <ul class="list-group grid push-0">
-        <li class="unit xs-1 m-1-2 l-1-2 island">
-          <div class="grid">
+      <ul class="list-group grid push-0 cards">
+        <li class="unit xs-1 m-1-2 island">
+          <div class="grid relative">
             <div class="unit embed embed-3by2 push">
               <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
             </div>
+            <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
+              <h3 class="gutter white">Available for Adoption</h3>
+            </div>
             <div class="unit xs-1">
-              <p>You know you've always wanted a dog and now is the time! We are here to help you get ready for your new family member, and as soon as you're ready to take the big plunge we're here to help you find the right dog. Owning a pet is one of the most gratifying things you can do.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="rescues.html">More info</a>
             </div>
           </div>
         </li>
-        <li class="unit xs-1 m-1-2 l-1-2 island">
-          <div class="grid">
+        <li class="unit xs-1 m-1-2 island">
+          <div class="grid relative">
             <div class="unit embed embed-3by2 push">
               <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
             </div>
+            <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
+              <h3 class="gutter white">Adoption Process</h3>
+            </div>
             <div class="unit xs-1">
-              <p>It's hard knowing what to do when you're about to adopt. We make this process easier when you adopt with us, because we have trained volunteers that will go over every possible question or concern you and your family might have about introducing your newest pal to the family.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
             </div>
             <div class="unit xs-1 text-center">
               <a class="btn gutter-2 push-0" href="adopt.html">More info</a>
@@ -106,14 +89,8 @@
       </ul>
     </section>
 
-    <article>
-      <div>
-        <p class="island-1-2 text-center push-0 white">Adopt a dog today</p>
-      </div>
-    </article>
-
     <section class="grid">
-      <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter pad-t">
+      <div class="unit xs-1 m-1-2 gutter pad-t">
         <h3 class="push-1-2">Contact Us</h3>
         <p class="push-1-2">ADOPTIONS: ADOPTIONS@FREEDOMDOGRESCUE.CA</p>
         <p class="push-1-2">EVENT/FUNDRAISING: FUNDRAISING@FREEDOMDOGRESCUE.CA</p>
@@ -121,7 +98,7 @@
         <p class="push-1-2">GENERAL INQUIRIES: FREEDOMDOGRESCUE@GMAIL.COM</p>
         <p class="push-1-2">DONATIONS: FINANCE@FREEDOMDOGRESCUE.CA</p>
       </div>
-      <div class="unit l-1-2">
+      <div class="unit l-1-2 island">
         <div class="embed embed-4by3">
           <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
         </div>
