Add navigation for homepage and two images

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1" id="nav" tabindex="0">
       <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
+        <li><a class="no-line gutter" href="index.html">Home</a></li>
         <li><a class="no-line gutter" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line gutter" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
@@ -27,7 +28,7 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="grid relative">
+    <section class="grid relative bg">
       <div class="unit xs-0 m-1">
         <div class="embed embed-16by9">
           <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
@@ -57,7 +58,7 @@
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/black-dog.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h3 class="gutter white">Available for Adoption</h3>
@@ -73,7 +74,7 @@
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/dog-chewing-stick.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h3 class="gutter white">Adoption Process</h3>
