--- a/rescues.html
+++ b/rescues.html
@@ -20,6 +20,7 @@
   <header role="banner" class="grid">
     <nav role="navigation" class="unit xs-1 s-1" id="nav" tabindex="0">
       <ul class="list-group-inline text-center pad-t-1-2 push-1-2">
+        <li><a class="no-line gutter" href="index.html">Home</a></li>
         <li><a class="no-line gutter" href="rescues.html">Available Rescues</a></li>
         <li><a class="no-line gutter" href="adopt.html">Adopt a Rescue</a></li>
       </ul>
