Add all the unique images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="unit l-1-2 island">
         <div class="embed embed-4by3">
-          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+          <img class="embed-item img-flex" src="images/people-with-puppy.jpg" alt="" aria-details="people-with-a-puppy">
         </div>
       </div>
     </section>
@@ -58,7 +58,7 @@
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/black-dog.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/black-dog.jpg" alt="" aria-details="black-sad-dog">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h3 class="gutter white">Available for Adoption</h3>
@@ -74,7 +74,7 @@
         <li class="unit xs-1 m-1-2 island">
           <div class="grid relative">
             <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/dog-chewing-stick.jpg" alt="" aria-details="3-brown-puppies">
+              <img class="embed-item img-flex" src="images/dog-chewing-stick.jpg" alt="" aria-details="dog-chewing-on-a-stick">
             </div>
             <div class="unit xs-1 pin-lt pad-t pad-b gradient-d">
               <h3 class="gutter white">Adoption Process</h3>
@@ -101,7 +101,7 @@
       </div>
       <div class="unit l-1-2 island">
         <div class="embed embed-4by3">
-          <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+          <img class="embed-item img-flex" src="images/brown-puppy-blanket.jpg" alt="" aria-details="3-brown-puppies">
         </div>
       </div>
     </section>
