--- a/rescues.html
+++ b/rescues.html
@@ -39,61 +39,79 @@
       <ul class="list-group grid push-0">
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid">
-            <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+            <div class="unit embed embed-1by1 push">
+              <img class="embed-item img-flex" src="images/collie-snow.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+            </div>
+            <div class="unit xs-1 text-center">
+              <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
             </div>
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid">
-            <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+            <div class="unit embed embed-1by1 push">
+              <img class="embed-item img-flex" src="images/corgi.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+            </div>
+            <div class="unit xs-1 text-center">
+              <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
             </div>
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid">
-            <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+            <div class="unit embed embed-1by1 push">
+              <img class="embed-item img-flex" src="images/husky.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+            </div>
+            <div class="unit xs-1 text-center">
+              <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
             </div>
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid">
-            <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+            <div class="unit embed embed-1by1 push">
+              <img class="embed-item img-flex" src="images/pug.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+            </div>
+            <div class="unit xs-1 text-center">
+              <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
             </div>
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid">
-            <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+            <div class="unit embed embed-1by1 push">
+              <img class="embed-item img-flex" src="images/shiba-inu.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+            </div>
+            <div class="unit xs-1 text-center">
+              <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
             </div>
           </div>
         </li>
         <li class="unit xs-1 m-1-3 l-1-3 island">
           <div class="grid">
-            <div class="unit embed embed-3by2 push">
-              <img class="embed-item img-flex" src="images/3-puppies.jpg" alt="" aria-details="3-brown-puppies">
+            <div class="unit embed embed-1by1 push">
+              <img class="embed-item img-flex" src="images/pitbull-leaves.jpg" alt="" aria-details="3-brown-puppies">
             </div>
             <div class="unit xs-1">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam congue lacus eu mollis finibus. Suspendisse laoreet dolor massa, in volutpat nunc posuere ut. Nunc et condimentum justo. Maecenas hendrerit, tortor a congue euismod, est mi bibendum leo, quis fringilla velit nisi id ligula. Sed efficitur cursus fringilla. Nam pulvinar tempor dignissim. Sed rhoncus pretium vestibulum. Sed eget libero venenatis, accumsan tellus laoreet, convallis tellus.</p>
+            </div>
+            <div class="unit xs-1 text-center">
+              <a class="btn gutter-2 push-0" href="adopt.html">Adopt Me</a>
             </div>
           </div>
         </li>
